<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.DetailActivity">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/mapUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/llBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bs_height"
        android:background="@color/generalWhite"
        android:orientation="vertical"
        app:layout_behavior="@string/bottom_sheet_behavior"
        app:behavior_hideable="true"
        app:behavior_peekHeight="@dimen/x_big_padding">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/generalGray"
            tools:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/tv_id_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/generalGray"
            tools:text="@string/user"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/generalGray"
            tools:text="@string/user_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/generalGray"
            tools:text="@string/location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>